# PlaidMCP

./: .claude_desktop_config.json  .env.example  .gitignore  check_db.py  pyproject.toml
chime_ingestor/: __init__.py  categorizer.py  cli.py  db.py  ingestor.py  migrations.py  models.py  parser.py  queries.py
config/: categories.yaml
docs/: ChimeIngestor_SDD_v0_1.md  PlaidMCP_Phase2_Directive.md  PlaidMCP_Phase5_Directive.md
docs/adr/: ADR-006.md
docs/state/: current.md
parsers/: __init__.py  cashapp_parser.py  chime_parser.py
plaid_mcp/: __init__.py  server.py
plaid_mcp/tools/: finance_tools.py  statement_tools.py
tests/: __init__.py  test_cashapp_parser.py  test_categorizer.py  test_db.py  test_ingestor.py  test_mcp_tools.py  test_migrations.py  test_parser.py  test_parser_credit.py  test_queries.py  test_registry.py
