[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaid-mcp"
version = "0.1.0"
description = "Chime/CashApp PDF ingestor with MCP query layer"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "fastmcp>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
chime-ingest = "chime_ingestor.cli:main"
plaid-mcp = "plaid_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["chime_ingestor", "parsers", "config", "plaid_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest-asyncio>=1.4.0",
]
